sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort()  {
var trier=true 
	while (trier){
	trier=false
	for (i<-0 to lg-2){
	if ( PlusPetitQue( i, i+1)){
		echange(i, i+1)
		trier=true
	}
	}
	
}
}
